I initially used transform and traslateX/Y() to move objects but then read in the tips section that they mentioned to use top/left/bottom/right.  So I added one instance of using that method to show I also understood that method.

--- a/scss/landing.css
+++ b/scss/landing.css
@@ -114,14 +114,22 @@
   position: relative;
 }
 .section2__img {
-  transform: translateX(-0.9em) translateY(-0.9em);
+  /* transform: translateX(-0.9em) translateY(-0.9em); */
+  top: -0.9em;
+  left: -0.9em;
+  bottom: 0.9em;
+  right: 0.9em;
 }
 .section2__border {
   inset: 0;
   border: 5px solid var(--color4);
   background-color: rgba(0, 0, 0, 0);
   position: absolute;
-  transform: translateX(-0.9em) translateY(-0.9em);
+  top: -0.9em;
+  left: -0.9em;
+  bottom: 0.9em;
+  right: 0.9em;
+  /* transform: translateX(-0.9em) translateY(-0.9em); */
 }
 .discount-section__bottom-section {
   height: 32rem;
