--- a/scss/menu.css
+++ b/scss/menu.css
@@ -147,13 +147,13 @@ li {
 }
 
 .title-box__border {
-  /* height: 12rem;
-  width: 18rem; */
-  inset: 0;
   border: 5px solid var(--color4);
   background-color: rgba(0, 0, 0, 0);
   position: absolute;
-  transform: translateX(-0.3em) translateY(-0.3em);
+  top: -0.3em;
+  left: -0.3em;
+  bottom: 0.3em;
+  right: 0.3em;
 }
 
 .title-box__title {
