--- a/scss/landing.css
+++ b/scss/landing.css
@@ -1,21 +1,3 @@
-/* Consistent colors, text sizes and max/min widths for each page */
-:root {
-  --color1: #393939;
-  --color2: #f7f7f7;
-  --color3: #fff;
-  --color4: #5bacc3;
-  --color5: #fff0ed;
-  --color6: #909090;
-  --h1-h2: 3.7rem;
-  --h3: 2.2rem;
-  --h3card: 2rem;
-  --p1: 1rem;
-  --p2: 1.3rem;
-  --p3: 2.8rem;
-  --min-width: 320px;
-  --max-width: 1440px;
-}
-
 /* Enitre document styles */
 * {
   margin: 0;
@@ -27,13 +9,13 @@ body {
   font-weight: 400;
   margin: auto;
   width: 100%;
-  max-width: var(--max-width);
-  min-width: var(--min-width);
+  max-width: 1440px;
+  min-width: 320px;
 }
 
 /* header section styles */
 .nav-bar {
-  background-color: var(--color5);
+  background-color: #fff0ed;
   padding-top: 1rem;
   padding-left: 1em;
   display: flex;
@@ -50,7 +32,7 @@ body {
   display: flex;
   align-items: center;
   padding-left: 1em;
-  min-width: var(--min-width);
+  min-width: 320px;
 }
 
 .list__item {
@@ -62,22 +44,21 @@ body {
 .item__link {
   padding: 1em 1em;
   text-align: center;
-  font-size: var(--p2);
-  color: var(--color1);
-  /* border: 1px solid red; */
+  font-size: 1.3rem;
+  color: #393939;
 }
 
 .item__link1:hover,
 .item__link2:hover {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .item__link3 {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .item__link3:hover {
-  color: var(--color1);
+  color: #393939;
 }
 
 /* Icon styles */
@@ -88,18 +69,18 @@ body {
 /* Font styles for entire document */
 .first-title {
   font-weight: 300;
-  color: var(--color1);
-  font-size: var(--h1-h2);
+  color: #393939;
+  font-size: 3.7rem;
 }
 
 .second-title {
   font-weight: 300;
-  color: var(--color1);
-  font-size: var(--h3);
+  color: #393939;
+  font-size: 2.2rem;
 }
 
 .main__price {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .link {
@@ -108,7 +89,7 @@ body {
 
 .header__text,
 .footer__text {
-  font-size: var(--p1);
+  font-size: 1rem;
 }
 
 /* list styles */
@@ -124,7 +105,7 @@ li {
 
 .nav-bar,
 .header__section {
-  background-color: var(--color5);
+  background-color: #fff0ed;
 }
 
 .header__section {
@@ -152,7 +133,7 @@ li {
 /* main section styles */
 .main__our-products {
   text-align: center;
-  background-color: var(--color2);
+  background-color: #f7f7f7;
   padding-bottom: 3em;
 }
 
@@ -162,7 +143,7 @@ li {
 
 .our-products__product-cards .product-card {
   display: inline-block;
-  background-color: var(--color3);
+  background-color: #fff;
   margin: 1em 3em;
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -183,7 +164,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--color5);
+  background-color: #fff0ed;
   height: 9em;
 }
 
@@ -192,10 +173,10 @@ li {
 }
 
 /* .description__title {
-  font-size: var(--h3card);
+  font-size: $h3card;
 } */
 .description__sub-title {
-  color: var(--color6);
+  color: #909090;
 }
 
 .main__our-products .main__price {
@@ -256,7 +237,6 @@ li {
 }
 
 .section2__img {
-  /* transform: translateX(-0.9em) translateY(-0.9em); */
   top: -0.9em;
   left: -0.9em;
   bottom: 0.9em;
@@ -264,7 +244,7 @@ li {
 }
 
 .section2__border {
-  border: 5px solid var(--color4);
+  border: 5px solid #5bacc3;
   background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: -0.9em;
@@ -281,20 +261,20 @@ li {
 }
 
 .bottom-section__description {
-  background-color: var(--color1);
-  color: var(--color3);
-  font-size: var(--p3);
+  background-color: #393939;
+  color: #fff;
+  font-size: 2.8rem;
   font-weight: 200;
   padding: 0.8em 1.2em;
   text-align: center;
   margin: auto;
-  min-width: var(--min-width);
+  min-width: 320px;
   width: 100%;
 }
 
 /* footer styles */
 .footer {
-  background-color: var(--color5);
+  background-color: #fff0ed;
   text-align: center;
   display: flex;
   justify-content: space-around;
@@ -332,9 +312,9 @@ li {
 /* button and icon styles */
 button {
   border: none;
-  background-color: var(--color4);
-  color: var(--color2);
-  font-size: var(--p2);
+  background-color: #5bacc3;
+  color: #f7f7f7;
+  font-size: 1.3rem;
   padding: 0.6em 1em 1em 0.4em;
   width: 9em;
   position: relative;
@@ -342,12 +322,12 @@ button {
 
 button:hover {
   cursor: pointer;
-  background-color: var(--color3);
-  color: var(--color4);
+  background-color: #fff;
+  color: #5bacc3;
 }
 
 .button__border {
-  border: 2px solid var(--color1);
+  border: 2px solid #393939;
   background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: -0.2em;
@@ -362,7 +342,7 @@ button:hover {
 }
 
 .social__icon:hover {
-  box-shadow: 1px 1px 6px var(--color4), 2px 2px 7px var(--color4), -2px -2px 8px var(--color4), inset 1px 1px 5px var(--color4), inset -1px -1px 6px var(--color4);
+  box-shadow: 1px 1px 6px #5bacc3, 2px 2px 7px #5bacc3, -2px -2px 8px #5bacc3, inset 1px 1px 5px #5bacc3, inset -1px -1px 6px #5bacc3;
 }
 
 /* responsive styles for smaller screen sizes */
