--- a/scss/menu.css
+++ b/scss/menu.css
@@ -1,21 +1,3 @@
-/* Consistent colors, text sizes and max/min widths for each page */
-:root {
-  --color1: #393939;
-  --color2: #f7f7f7;
-  --color3: #fff;
-  --color4: #5bacc3;
-  --color5: #fff0ed;
-  --color6: #909090;
-  --h1-h2: 3.7rem;
-  --h3: 2.2rem;
-  --h3card: 2rem;
-  --p1: 1rem;
-  --p2: 1.3rem;
-  --p3: 2.8rem;
-  --min-width: 320px;
-  --max-width: 1440px;
-}
-
 /* Enitre document styles */
 * {
   margin: 0;
@@ -27,13 +9,13 @@ body {
   font-weight: 400;
   margin: auto;
   width: 100%;
-  max-width: var(--max-width);
-  min-width: var(--min-width);
+  max-width: 1440px;
+  min-width: 320px;
 }
 
 /* header section styles */
 .nav-bar {
-  background-color: var(--color5);
+  background-color: #fff0ed;
   padding-top: 1rem;
   padding-left: 1em;
   display: flex;
@@ -50,7 +32,7 @@ body {
   display: flex;
   align-items: center;
   padding-left: 1em;
-  min-width: var(--min-width);
+  min-width: 320px;
 }
 
 .list__item {
@@ -62,22 +44,21 @@ body {
 .item__link {
   padding: 1em 1em;
   text-align: center;
-  font-size: var(--p2);
-  color: var(--color1);
-  /* border: 1px solid red; */
+  font-size: 1.3rem;
+  color: #393939;
 }
 
 .item__link1:hover,
 .item__link2:hover {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .item__link3 {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .item__link3:hover {
-  color: var(--color1);
+  color: #393939;
 }
 
 /* Icon styles */
@@ -88,18 +69,18 @@ body {
 /* Font styles for entire document */
 .first-title {
   font-weight: 300;
-  color: var(--color1);
-  font-size: var(--h1-h2);
+  color: #393939;
+  font-size: 3.7rem;
 }
 
 .second-title {
   font-weight: 300;
-  color: var(--color1);
-  font-size: var(--h3);
+  color: #393939;
+  font-size: 2.2rem;
 }
 
 .main__price {
-  color: var(--color4);
+  color: #5bacc3;
 }
 
 .link {
@@ -108,7 +89,7 @@ body {
 
 .header__text,
 .footer__text {
-  font-size: var(--p1);
+  font-size: 1rem;
 }
 
 /* list styles */
@@ -130,15 +111,15 @@ li {
 .header-links__list,
 .header-links__list-item {
   width: 100%;
-  background-color: var(--color1);
-  color: var(--color3);
+  background-color: #393939;
+  color: #fff;
   text-align: center;
 }
 
 .header-menu__title-box {
   height: 12rem;
   width: 18rem;
-  background-color: var(--color1);
+  background-color: #393939;
   margin: auto;
   position: relative;
   display: flex;
@@ -147,7 +128,7 @@ li {
 }
 
 .title-box__border {
-  border: 5px solid var(--color4);
+  border: 5px solid #5bacc3;
   background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: -0.3em;
@@ -157,7 +138,7 @@ li {
 }
 
 .title-box__title {
-  color: var(--color3);
+  color: #fff;
   transform: translateX(-0.1em) translateY(-0.1em);
 }
 
@@ -168,7 +149,7 @@ li {
 .header-links__list-item {
   display: inline;
   padding: 0 0.8em;
-  border-left: 0.2em solid var(--color4);
+  border-left: 0.2em solid #5bacc3;
   text-transform: uppercase;
 }
 
@@ -198,7 +179,7 @@ li {
 .main .main__description {
   width: 30%;
   margin: auto;
-  min-width: var(--min-width);
+  min-width: 320px;
 }
 
 .main__section {
@@ -207,11 +188,11 @@ li {
 
 .main__hot-drinks,
 .main__pastries {
-  background-color: var(--color5);
+  background-color: #fff0ed;
 }
 
 .main__cold-drinks {
-  background-color: var(--color2);
+  background-color: #f7f7f7;
 }
 
 .main__section:last-child {
@@ -222,7 +203,7 @@ li {
 .footer,
 .footer__icon,
 .footer__text {
-  background-color: var(--color5);
+  background-color: #fff0ed;
   text-align: center;
 }
 
@@ -243,7 +224,7 @@ li {
     width: 12rem;
   }
   .title-box__title {
-    font-size: var(--p3);
+    font-size: 2.8rem;
   }
   .main__description {
     width: 60%;
