--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -1,4 +1,5 @@
 @use "./variables" as *;
+@use "./mixins" as *;
 
 /* Enitre document styles */
 * {
@@ -21,6 +22,7 @@ body {
   padding-left: 1em;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 .nav-bar__banner-content {
   display: flex;
@@ -31,7 +33,6 @@ body {
   display: flex;
   align-items: center;
   padding-left: 1em;
-  min-width: $min-width;
 }
 .list__item {
   padding: 1.3em 1em;
@@ -89,6 +90,30 @@ li {
 
 /* responsive styles for smaller screen sizes */
 @media (max-width: 960px) {
+  .nav-bar__list {
+    padding-left: 0;
+    overflow: hidden;
+  }
+  .list__item {
+    padding: 0;
+    text-wrap: nowrap;
+  }
 }
 @media (max-width: 480px) {
+  .nav-bar__banner-content {
+    .icon {
+      width: 2em;
+    }
+    .second-title {
+      font-size: $p2;
+    }
+  }
+  .list_item {
+    margin: 0;
+    padding: 0;
+  }
+  .item__link {
+    font-size: 1em;
+    margin: 0;
+  }
 }
