--- a/scss/landing.css
+++ b/scss/landing.css
@@ -179,12 +179,6 @@ li {
 .product-card__container-top {
   padding: 1em 2em 1em;
 }
-
-.container-top__img {
-  height: 15rem;
-  margin-bottom: 1em;
-}
-
 .product-card__container-bottom {
   padding: 1em 1em;
   display: flex;
@@ -194,13 +188,15 @@ li {
   height: 9em;
 }
 
+.container-top__img {
+  height: 15rem;
+  margin-bottom: 1em;
+}
+
 .container-bottom__description {
   text-align: left;
 }
 
-/* .description__title {
-  font-size: $h3card;
-} */
 .description__sub-title {
   color: #909090;
 }
@@ -229,7 +225,6 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid orange; */
 }
 
 .top-section__section1 {
@@ -239,7 +234,6 @@ li {
 .section1__title {
   margin-bottom: 0.4em;
 }
-
 .section1__images {
   display: flex;
   justify-content: space-between;
@@ -268,7 +262,6 @@ li {
   bottom: 0.9em;
   right: 0.9em;
 }
-
 .section2__border {
   border: 5px solid #5bacc3;
   background-color: rgba(0, 0, 0, 0);
@@ -283,7 +276,6 @@ li {
   height: 32rem;
   width: 80%;
   display: flex;
-  /* border: 1px solid red; */
 }
 
 .bottom-section__description {
@@ -307,30 +299,24 @@ li {
   position: relative;
   overflow: hidden;
 }
-
-.footer__background-img1,
-.footer__background-img2 {
+.footer__background-img1, .footer__background-img2 {
   position: absolute;
   width: 6em;
   opacity: 0.2;
 }
-
 .footer__background-img1 {
   top: 1em;
   left: -2em;
 }
-
 .footer__background-img2 {
   bottom: 1em;
   right: -2em;
 }
-
 .footer__section {
   display: inline-block;
   margin: 4em 2em;
   text-align: left;
 }
-
 .footer .second-title {
   margin-bottom: 0.5em;
 }
@@ -345,7 +331,6 @@ button {
   width: 9em;
   position: relative;
 }
-
 button:hover {
   cursor: pointer;
   background-color: #fff;
@@ -406,21 +391,20 @@ button:hover {
   .section1__images {
     width: 100%;
   }
+  .footer {
+    display: flex;
+    flex-flow: wrap;
+  }
   .footer__section,
   .footer p {
     margin: 1em;
     padding: 0;
     text-align: center;
   }
-  .footer {
-    display: flex;
-    flex-flow: wrap;
-  }
 }
 @media (max-width: 480px) {
   .our-products__product-cards .product-card {
     width: 17em;
-    padding: 1em;
   }
   .top-section__section1 {
     margin-bottom: 4em;
