--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -37,41 +37,44 @@
 .our-products__title {
   padding: 0.7em 0;
 }
-.our-products__product-cards .product-card {
-  display: inline-block;
-  background-color: $color3;
-  margin: 1em 3em;
-  box-shadow: 0 5px 9px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  width: 20em;
+.our-products__product-cards {
+  .product-card {
+    display: inline-block;
+    background-color: $color3;
+    margin: 1em 3em;
+    box-shadow: 0 5px 9px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    width: 20em;
+  }
 }
-.product-card__container-top {
-  padding: 1em 2em 1em;
+.product-card {
+  &__container-top {
+    padding: 1em 2em 1em;
+  }
+  &__container-bottom {
+    padding: 1em 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $color5;
+    height: 9em;
+  }
 }
 .container-top__img {
   height: 15rem;
   margin-bottom: 1em;
 }
-.product-card__container-bottom {
-  padding: 1em 1em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: $color5;
-  height: 9em;
-}
 .container-bottom__description {
   text-align: left;
 }
-/* .description__title {
-  font-size: $h3card;
-} */
 .description__sub-title {
   color: $color6;
 }
-.main__our-products .main__price {
-  font-size: 1.8em;
-  font-weight: 700;
+.main__our-products {
+  .main__price {
+    font-size: 1.8em;
+    font-weight: 700;
+  }
 }
 .our-products__button {
   padding-left: 2em;
@@ -79,9 +82,7 @@
 }
 .main__discount-section {
   height: 64rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex-column-center();
 }
 .discount-section__top-section {
   height: 32rem;
@@ -90,19 +91,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid orange; */
 }
 .top-section__section1 {
   width: 37%;
 }
-.section1__title {
-  margin-bottom: 0.4em;
-}
-.section1__images {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 1.5em;
-  padding-bottom: 1.8em;
+.section1 {
+  &__title {
+    margin-bottom: 0.4em;
+  }
+  &__images {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1.5em;
+    padding-bottom: 1.8em;
+  }
 }
 .images__icon {
   width: 2.4em;
@@ -112,25 +114,24 @@
   padding: 4em 1.2em;
   background-image: url(../Assets/coldbrewbackground.png);
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center();
   position: relative;
 }
-.section2__img {
-  top: -0.9em;
-  left: -0.9em;
-  bottom: 0.9em;
-  right: 0.9em;
-}
-.section2__border {
-  @include offset-border(0.9em, 5px, $color4);
+.section2 {
+  &__img {
+    top: -0.9em;
+    left: -0.9em;
+    bottom: 0.9em;
+    right: 0.9em;
+  }
+  &__border {
+    @include offset-border(0.9em, 5px, $color4);
+  }
 }
 .discount-section__bottom-section {
   height: 32rem;
   width: 80%;
   display: flex;
-  /* border: 1px solid red; */
 }
 .bottom-section__description {
   background-color: $color1;
@@ -151,28 +152,29 @@
   justify-content: space-around;
   position: relative;
   overflow: hidden;
-}
-.footer__background-img1,
-.footer__background-img2 {
-  position: absolute;
-  width: 6em;
-  opacity: 0.2;
-}
-.footer__background-img1 {
-  top: 1em;
-  left: -2em;
-}
-.footer__background-img2 {
-  bottom: 1em;
-  right: -2em;
-}
-.footer__section {
-  display: inline-block;
-  margin: 4em 2em;
-  text-align: left;
-}
-.footer .second-title {
-  margin-bottom: 0.5em;
+
+  &__background-img1,
+  &__background-img2 {
+    position: absolute;
+    width: 6em;
+    opacity: 0.2;
+  }
+  &__background-img1 {
+    top: 1em;
+    left: -2em;
+  }
+  &__background-img2 {
+    bottom: 1em;
+    right: -2em;
+  }
+  &__section {
+    display: inline-block;
+    margin: 4em 2em;
+    text-align: left;
+  }
+  .second-title {
+    margin-bottom: 0.5em;
+  }
 }
 /* button and icon styles */
 button {
@@ -183,15 +185,17 @@ button {
   padding: 0.6em 1em 1em 0.4em;
   width: 9em;
   position: relative;
-}
-button:hover {
-  cursor: pointer;
-  background-color: $color3;
-  color: $color4;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $color3;
+    color: $color4;
+  }
 }
 .button__border {
   @include offset-border(0.2em, 2px, $color1);
 }
+
 .description__button,
 .our-products__button {
   margin-top: 2em;
@@ -220,9 +224,8 @@ button:hover {
   .top-section__section1 {
     margin-bottom: 6em;
     width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-column-center();
+
     .section1__title {
       text-align: center;
       margin-bottom: 0.3em;
@@ -235,21 +238,21 @@ button:hover {
   .section1__images {
     width: 100%;
   }
-  .footer__section,
-  .footer p {
-    margin: 1em;
-    padding: 0;
-    text-align: center;
-  }
   .footer {
     display: flex;
     flex-flow: wrap;
+
+    &__section,
+    p {
+      margin: 1em;
+      padding: 0;
+      text-align: center;
+    }
   }
 }
 @media (max-width: 480px) {
   .our-products__product-cards .product-card {
     width: 17em;
-    padding: 1em;
   }
   .top-section__section1 {
     margin-bottom: 4em;
@@ -259,6 +262,7 @@ button:hover {
     height: auto;
     position: relative;
     margin-bottom: 1em;
+
     .section2__img {
       width: 70%;
       height: auto;
