--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -8,3 +8,13 @@
   bottom: $offset;
   right: $offset;
 }
+@mixin flex-column-center() {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@mixin flex-center() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
